--- a/home/styles.css
+++ b/home/styles.css
@@ -1,23 +1,32 @@
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Poppins';
+    color: #c3e1fa;
+}
+a {
+    text-decoration: none;
 }
 body {
-    background-color: #f5f5f5;
+    background-image: url(img/bg.jpg);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .card {
-    background-color: #fff;
+    background-color: transparent;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 30rem;
-    height: 20rem;
-    justify-content: center;
+    height: 35rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     text-align: center;
 }
 .header {
     font-size: 2rem;
+}
+.selection p {
+    font-size: 1.5rem;
+    /* margin: 0; */
 }
 ul {
     list-style: none;
@@ -26,8 +35,9 @@ ul {
     justify-content: center;
 }
 li {
-    margin: 20px;
+    margin: 25px;
+    font-size: 0.75rem;
 }
 i {
-    font-size: 2rem;
+    font-size: 3rem;
 }
