--- a/home/styles.css
+++ b/home/styles.css
@@ -2,7 +2,7 @@
 
 * {
     font-family: 'Poppins';
-    color: #c3e1fa;
+    color: white;
 }
 a {
     text-decoration: none;
@@ -15,9 +15,10 @@ body {
     align-items: center;
     justify-content: center;
     /* gradient background */
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);    alternate gradient */
+    background: linear-gradient(-45deg, #be1a95, #4d1d90, #10106e, #06063c);
 	background-size: 400% 400%;
-	animation: gradient 10s ease infinite;
+	animation: gradient 8s ease infinite;
 	height: auto;
 }
 .card {
