--- a/guess-the-flag/styles.css
+++ b/guess-the-flag/styles.css
@@ -5,7 +5,7 @@
     font-family: 'Inter';
 }
 body {
-    background-color: #222831;
+    background-color: #06283D;
     color: white;
     margin: 0;
     text-align: center;
@@ -41,7 +41,7 @@ button {
 #websiteLogo {
     width: 30px;
     text-decoration: none;
-    color: #EEEEEE;
+    color: white;
 }
 .heading {
     text-align: center;
@@ -79,7 +79,7 @@ button {
 .start button {
     font-size: 1rem;
     padding: 0.8rem;
-    background-color: #393E46;
+    background-color: #256D85;
     color: white;
     border: 0;
     border-radius: 0;
@@ -103,7 +103,7 @@ button {
     font-size: 1rem;
     padding: 0.5rem;
     margin: 0.3rem;
-    background-color: #393E46;
+    background-color: #256D85;
     color: white;
     border-radius: 0;
 }
@@ -117,7 +117,7 @@ button {
     font-size: 0.65rem;
     padding: 0.5rem;
     margin: 0.4rem;
-    background-color: #EEEEEE;
+    background-color: #DFF6FF;
     color: black;
     border-radius: 0;
 }
@@ -132,7 +132,7 @@ button {
     font-size: 0.8rem;
     padding: 0.5rem;
     margin: 0.4rem;
-    background-color: #393E46;
+    background-color: #256D85;
     color: white;
     border-radius: 0;
 }
@@ -146,18 +146,18 @@ button {
 /* HOVER STATES */
 
 .start button:active {
-    background-color: #EEEEEE;
+    background-color: #DFF6FF;
     color: #000;
 }
 .answers button:active {
-    background-color: #EEEEEE;
+    background-color: #DFF6FF;
     color: black;
 }
 .otherOptions button:active {
-    background-color: #393E46;
+    background-color: #256D85;
     color: white;
 }
 .next button:active {
-    background-color: #EEEEEE;
+    background-color: #DFF6FF;
     color: black;
 }
