--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* INITIALIZATIONS */
+
 * {
     font-family: 'Jost','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
@@ -11,6 +13,9 @@ body {
     height: 100vh;
     margin: 0px;
 }
+
+/* GLASS OVERLAY */
+
 .glass {
     width: 50rem;
     height: 25rem;
@@ -26,6 +31,9 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+/* CONTENTS OF GLASS OVERLAY */
+
 .heading h1 {
     font-size: 3rem;
     font-weight: 500;
@@ -35,12 +43,15 @@ body {
 .content p {
     font-size: 1.2rem;
 }
+
+/* ICONS LINKED TO SOCIALS */
+
 .icon {
     border: none;
     color: white;
     background-color: transparent;
     padding: 12px 8px;
-    font-size: 28px;
+    font-size: 26px;
     cursor: pointer;
 }
 i {
@@ -49,8 +60,14 @@ i {
 i:hover {
     transform: scale(1.2);
 }
+
+/* RESUME AND CONTACT BUTTONS */
+
 #download {
     transform: scale(1);
+}
+.buttons span {
+    padding: 0.3rem;
 }
 .button {
     border: 1.5pt solid white;
@@ -61,9 +78,9 @@ i:hover {
     font-size: 14px;
     cursor: pointer;
 }
+
+/* HOVER STATES */
+
 .button:hover {
     background-color: rgba(255,255,255,0.15);
-}
-.buttons span {
-    padding: 0.3rem;
 }
