--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,23 @@ i:hover {
 .button:hover {
     background-color: rgba(255,255,255,0.15);
 }
+
+/* MEDIA QUERIES FOR MOBILE RESPONSIVITY */
+
+@media only screen and (max-width: 900px) {
+    .glass {
+        width: 90vw;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .glass {
+        width: 80vw;
+        height: 80%;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .glass {
+        width: 80vw;
+        height: 90%;
+    }
+}
